--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 -->
 <html>
 	<head>
-		<title>TayeDataInsights </title>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    
-                                                                                  
+		<title>TayeDataInsights </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -51,87 +50,268 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
-								<header class="major">
-									<h2><a href="#">Data Analysis in Excel<br />
-									</a></h2>
-									<p>Explore the fascinating dynamics of bike sales among singles and married individuals, delving into nuanced gender differences. Our in-depth analysis unveils intriguing trends, offering valuable insights into consumer behavior.</p>
+								<header class="major">                                                            
+  
+  
+  
+									<h2><a href="#">Data Analysis in Excel: Accenture’s Data Analytics & Visualization job simulation project.
+									</a></h2><hr>
+									<h3 style="text-align:left;">Table of contents</h3><hr>
+									<ul style="text-align:left;">
+  										<li><a href="#">Project recap</a></li>
+										<li><a href="#">Data Source</a>
+											<ul>
+												<li><a href="#">Data sets - Quick Explanation</a></li>
+												<li><a href="#">Tools</a></li>
+											</ul>
+										</li>
+  										<li><a href="#">Problem</a></li>
+  										<li><a href="#">The Analytics Team</a></li>
+										<li><a href="#">Process</a></li>
+										<li><a href="#">Insights</a></li>
+										<li><a href="#">Summary</a></li>
+									</ul>
+									<p style="text-align:left;">Today's agenda will be as follows:
+									<ol style="text-align:left;">
+										<li>We will recap the overall project to give a high level understanding of the
+									business problem we're tackling and the specific requirements.
+										</li>
+										<li>We will dive into the specific problem that we, the Data Analytics team, have
+									been focusing on and will give some background as to why this is such a big
+									problem.
+										</li>
+										<li>After introducing the problem, I will go over the team responsible from our
+									side in tackling this task.
+										</li>
+										<li>I will then go over the high-level process that we followed to complete this
+									task, so that you have complete clarity in how we tackle these kinds of tasks.
+										</li>
+										<li>Finally, I will go over the all important results and I will present them as a
+									series of insights and visualizatio's from our analysis.
+										</li>
+									</ol>                 
+									</p>                    
+									<h3 style="text-align:left;">Project Recap</h3><hr>
+									<img src="images/Project recap.png" alt="Project Recap">
+									<div style="text-align:left;">
+										<p>To kick things off let me recap this engagement.
+										</p>
+										<p>We, Accenture have embarked on a 3 month pilot with Social Buzz to focus on
+											3 main tasks, aligned with some of the biggest challenges that you're currently
+											facing.
+										</p>
+										<p>Social Buzz has reached huge scale in recent years to become recognized as a
+											global unicorn company. We are here to help you manage this scale and to
+											guide you in the right direction.
+										</p>
+										<p>Firstly, we will be doing an audit of your big data practice and sharing best
+											practices and industry expertise. Secondly we will be guiding you through a
+											successful IPO, of which we have deep expertise and knowledge of within our
+											team. And finally, we have conducted an analysis of your data to find insights
+											regarding your top 5 most popular categories of content
+										</p>
+									</div>
+
+									<h3 style="text-align:left;">Data Source</h3><hr>
+									<ul style="text-align:left;">
+										<li><a href="https://www.theforage.com/virtual-experience/hzmoNKtzvAzXsEqx8/accenture-north-america/data-analytics-mmlb/data-cleaning-modeling">Data Source</a></li>
+									</ul>
+									<h3 style="text-align:left;">Data sets - Quick Explanation:</h3><hr>
+									<ol style="text-align:left;">
+										<li>Identify the best data sets needed for the analysis from data tables the client has sent through:
+											<ul>
+												<li>7 data sets - each data set contains different columns and values</li>
+												<li>A data model - this shows the relationships between all of the data sets, as well as any links that you can use to merge tables.
+													There is a lot of information here and it’s easy to get lost in the data. So, to make sure you are using the right data to answer the business questions you’ll follow these steps:
+												</li>
+												<ol>
+													<li>Requirements gathering</li>
+													<li>Data cleaning</li>
+													<li>Data modelling</li>
+												</ol>	
+											</ul>
+										</li>
+									</ol>
+									<h3 style="text-align:left;">Tools</h3><hr>
+									<table>
+										<tr style="text-align:left;">
+										  <th>Tool</th>
+										  <th>Purpose</th>
+										</tr>
+										<tr style="text-align:left;">
+										  <td>Excel</td>
+										  <td>Exploring the data, Cleaning, testing, and analyzing the data</td>
+										</tr>
+										<tr style="text-align:left;">
+										  <td>Tableau</td>
+										  <td>Visualizing the data via interactive dashboards</td>
+										</tr>
+									  </table>
+
+									<h3 style="text-align:left;">Problem</h3><hr>
+									<img src="images/Problem.png" alt="Problem">
+									<div style="text-align:left;"><p>Focusing on the last point that I mentioned there, this is what the Data Analytics
+										team has been specifically focused on.
+										Clearly with such grand scale, this comes with a lot of data and with such vast
+										amounts of data comes challenges.
+									</p>
+										To give a background on how much data you've been creating:
+										<ul>
+											<li>You told us that your platform receives over 100000 posts per day which
+												amounts to 36 500 000 posts every year, of which, this is all unstructured data
+												making it very hard to make sense of.
+											</li>
+										</ul>
+									<p>In this day and age, content is king. Just look at some of the biggest platforms
+										in the world, for example YouTube, Facebook and Netflix... they are all content
+										businesses...
+									</p>
+									<p>But how to capitalize on it when there is so much?
+									</p>
+									<p>It's not just all about harvesting as much content as possible... The real value is
+										in understanding and crunching this content to gain a deeper understanding of
+										your audience and to therefore provide a more personalized and enjoyable
+										experience.
+									</p>
+									<p>And this is where out data analytics expertise comes in, with the insights that
+										we've uncovered from this task, we can show you exactly how to take analytics
+										to production at scale.
+									</p>
+									</div>	
+
+									<h3 style="text-align:left;">Analytics Team</h3><hr>
+									<img src="images/Team.png" alt="Team">
+									<div style="text-align:left;">
+									<p>Talking about experience, we have a large data analytics practice at Accenture
+										but we had a team of 3 people primarily focusing on this task. Andrew Fleming
+										is our Chief Technical Architect and his expertise really helped to guide the
+										team to produce high quality analysis.
+									</p>
+									<p>Marcus Rompton, a senior principal has worked with the worlds biggest clients
+										on solving their data problems and was heavily involved in the data engineering
+										side of this project.
+									</p>
+									<p>And finally myself, Taye David Ibukun, who was solely responsible for taking leadership
+										guidance and delivering high quality insights from the raw datasets and turning
+										these into business decisions.
+									</p>
+									</div>
+
+									<h3 style="text-align:left;">Process</h3><hr>
+									<img src="images/Process.png" alt="Process">
+									<p style="text-align:left;">So, how did we tackle this problem?
+									Well we approached it in 5 steps:
+									<ol style="text-align:left;">
+										<li>Data understanding - the key to success on any data project is to understand
+												the data in detail. So we took the time to understand the data model and
+												domain of your business.
+										</li>
+										<li>Data cleaning - after understanding your business, we then cleaned the
+												available datasets and thought about what an ideal dataset should look like for
+												this problem.
+										</li>
+										<li>Data modelling - After ensuring the data was clean for analysis, we needed
+												to process and model this data into a dataset that can precisely answer the
+												business questions and produce the results needed.
+										</li>
+										<li>Data analysis - With our new dataset, we used our analytical expertise to
+												uncover insights from this dataset and to produce visualizations to describe the
+												insights.
+										</li>
+										<li>And finally we used these insights to unlock business decisions and to make
+												recommendations on next steps.
+										</li>
+									</ol>
+									</p>
+
+									<h3 style="text-align:left;">Insights</h3><hr>
+									<img src="images/Insights.png" alt="Insights">
+									<div style="text-align:left;">
+									<p>From your data we found that you had a total of 16 unique categories of posts
+										across your sample dataset. This includes things such as Food, Science and
+										Animals.
+									</p>
+									<p>As well as this, there were 1897 reactions from just the animal category alone!
+										People obviously really like animals!
+									</p>
+									<p>And also the most common month for users to post within was January. This
+										aligns with seasonal trends of social media users that feel the need to
+										reconnect with people after calendar events such as Christmas.
+									</p>
+									<p>But now, onto the main question... which is... what were the top 5 most popular
+										categories of posts?
+									</p>
+									</div>
+									<img src="images/Insights2.png" alt="Insights2">
+									<div><p>From our analysis, you can see that the top 5 most popular categories of posts
+										were animals, science, healthy eating, technology and food in descending
+										order.
+									</p>
+									<p>Animals had an aggregate popularity score of around 74965. It is very
+										interesting to see both food and healthy eating within the top 5, it really shows
+										that food is a highly engaging content category. Healthy eating ranks slightly
+										higher than food, so perhaps your user base may be skewed towards healthy
+										eaters and health-conscious people.
+									</p>
+									<p>Finally, its also interesting to see science and technology too. This may suggest
+										that people enjoy consuming factual content and snippets of content that they
+										can learn something from.
+									</p>
+									</div>
+									<img src="images/Insights3.png" alt="Insights3">
+									<div style="text-align:left;">
+									<p>Additionally, you can see from this chart the % split of popularity between the
+										top 5 categories. There is not much difference between the share of each
+										category, however, the difference between the 1st most popular, animals and
+										the 2nd most popular, science, is the largest gap equal to 1.1%.	
+									</p>
+									<p>In business terms, this could suggest that the most popular category, animals,
+										is tailing away from the rest of the categories and may continue to get more and
+										more popular. To avoid an issue where 1 content category consumes the entire
+										platform, it will be important for you to ensure that any algorithms used to
+										govern the content on the platform gives a fair balance to the content
+										categories.
+									</p>
+									</div>
+
+									<h3 style="text-align:left;">Summary</h3><hr>
+									<img src="images/Summary.png" alt="Summary">
+									<div style="text-align:left;">
+									<p style="text-align:left;">So to summarize:
+										We tackled this task and found the top 5 most popular categories as asked, but
+										we also went one step further.
+									</p>
+									<ul style="text-align:left;">
+										<li>We found that animals and science are the two most popular categories,
+											suggesting that users like "real-life" and "factual" content
+										</li>
+										<li>We also found that food was a common theme amongst popular content and
+											the most popular food category was healthy eating. This could be a signal to
+											show the types of people that are using your platform, and you could use this
+											insight to boost engagement even further. For example, you could run a
+											campaign with content focused on this category or work with healthy eating
+											brands to promote content.
+										</li>
+										<li>As much as this analysis was insightful, we are ready to take it to the next
+											stage and we have the expertise within Accenture to help you realize these
+											kinds of insights in production across your organization and in real-time. We
+											would love to help you with this.
+										</li>
+									</ul>
+									</div>
 								</header>
-								<a href="#" class="image main"><img src="images/Bike.PNG" alt="" /></a>
+								<a href="#" class="image main"><img src="images/Graph.PNG" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">View Project</a></li>
 								</ul>
 							</article>
-
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<h2><a href="#">Data Analysis with PowerBi<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/PowerBi-Products.PNG" alt="" /></a>
-									<p>Explore the comprehensive Global Products sales analysis through the lens of Power BI. Our dynamic visualizations and insightful reports provide a data-driven journey, unraveling key trends and empowering informed decision-making.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Data Analysis with Tableau<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/Tableau-Product2.JPG" alt="" /></a>
-									<p>Explore the intricate landscape of global product sales through our comprehensive Tableau analysis. Uncover actionable insights and trends, empowering your business decisions with data-driven strategies for unparalleled success.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Data Analysis with Python<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/Python-Test Prediction.PNG" alt="" /></a>
-									<p>Embark on a journey of predictive analysis with Python, unraveling correlations between weight and height. Our innovative approach leverages data science to forecast and enhance understanding for informed decisions.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Data Exploiration in SQL<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/SQL.webp" alt="" /></a>
-									<p>Embark on a journey of data exploration with SQL, unraveling insights that drive informed decisions. Discover the power of structured query language in dissecting and understanding your data landscape.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-	
-							</section>
-
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">4</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
-
-					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
 						<section class="split contact">
 							<section>
 								<h3>Location</h3>
-								<p>Minna, Niger State.</p>
+								<p>Abuja, Nigeria.</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
