--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h3>I am<br /></h3>
-						<h1>Taye Ibukun<br />
+					                    
+						<h1>TayeDataInsights<br />                                                                                                    
 						</h1>
 						<p>Data Analyst skilled in Excell, PowerBi, Tableau, SQL & Python <a href="www.linkedin.com/in/taye-ibukun-82b554aa">@Taye David Ibukun</a><br />
 						.</p>
