--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">PROJECTS</a>
+						<a href="index.html" class="logo">PROJECT</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
+							<li class="active"><a href="index.html">Project</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="www.linkedin.com/in/taye-ibukun-82b554aa" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
