--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/Graph.PNG" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://oluwataye.github.io/My-Accenture-s-Data-Analytics-Visualization-Job-Simulation-Project.github.io/" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
